additional spacing fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,10 +148,6 @@ pre {
   white-space: pre;
 }
 
-main > div {
-  margin: 40px 16px;
-}
-
 input,
 textarea,
 select,
